syntax = "proto3";

package suggest_trie;

import "google/protobuf/struct.proto";

option go_package = "suggest/suggest_trie";

message Item {
  float Weight = 1;
  string OriginalText = 2;
  google.protobuf.Struct Data = 4;
}

message ClassItems {
  repeated string Classes = 4;
  repeated float ItemWeights = 2;
  repeated uint32 ItemIndexes = 3;
}

message SuggestTrie {
  repeated uint32 DescendantKeys = 1;
  repeated SuggestTrie DescendantTries = 2;
  repeated ClassItems Items = 4;
}

message SuggestData {
  SuggestTrie Trie = 1;
  repeated Item Items = 2;
}
